# Structure-from-Motion-with-Deep-Features-for-3D-Reconstruction

./: CMakeLists.txt  README.md  main.cpp  sfm_deepfeatures  sfm_deepfeatures.pub  sfm_module.h
cmake/: Doxygen.cmake  run_python_script.cmake
features_output/: resnet_features.npy
src/: config.yaml  deep_feature_extractor.py  main.cpp
